Now also shows mean legend + graph dialog interface update